<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/aboutTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_do_task"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@id/aboutTitleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/appMakerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developed_by"
        android:textSize="20sp"
        android:textColor="#77797C"
        android:layout_below="@id/appNameTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/versionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textSize="16sp"
        android:textColor="#77797C"
        android:layout_below="@id/appMakerTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:textSize="16sp"
        android:textColor="#77797C"
        android:layout_below="@id/versionTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/feedbackTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_feedback"
        android:textColor="#0874EF"
        android:textStyle="bold"
        android:layout_below="@id/feedback"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />

</RelativeLayout>

